--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,13 @@
                 <version>${bean.version}</version>
             </dependency>
 
+            <!--redis-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>2.4.0</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
     <dependencies>
