--- a/question-service/pom.xml
+++ b/question-service/pom.xml
@@ -117,6 +117,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
