--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>user-service</module>
         <module>question-service</module>
         <module>feign-api</module>
+        <module>gateway</module>
     </modules>
 
     <packaging>pom</packaging>
