完善登录拦截

--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>jjwt</artifactId>
         </dependency>
 
+        <!--fastjson-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
 
 
     </dependencies>
