--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>user-service</module>
+        <module>star-service</module>
+        <module>focus-service</module>
         <module>question-service</module>
         <module>feign-api</module>
         <module>gateway</module>
