--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>fastjson</artifactId>
         </dependency>
 
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
 
 
     </dependencies>
