--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
   cloud:
     nacos:
       server-addr: 127.0.0.1:8848 # nacos地址
+  redis:
+    host: 47.98.49.89
     gateway:
       routes:
         - id: user-service # 路由标识，必须唯一
