--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,13 @@
                 <version>2.4.0</version>
             </dependency>
 
+            <!--AMQP依赖，包含RabbitMQ-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-amqp</artifactId>
+                <version>2.4.0</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
     <dependencies>
